added black bg to the img div in merbeship detail, improved ui

--- a/memberships/templates/memberships/membership_detail.html
+++ b/memberships/templates/memberships/membership_detail.html
@@ -33,27 +33,32 @@
                 <div class="row">
 
                     <!-- membership detail image -->
-                    <div class="col-12 col-lg-6">
-                        <a href="{{ membership.image.url }}" target="_blank" class="mx-auto">  
-                            {% if membership.image %}
-                                <a href="{{ membership.image.url }}" target="_blank">
-                                    <img class="card-img-top img-fluid rounded" src="{{ membership.image.url }}" alt="{{ membership.name }}">
-                                </a>
-                                {% else %}
-                                <a href="">
-                                    <img class="card-img-top img-fluid" src="{{MEDIA_URL }}noimage.png" alt="{{ membership.name }}">
-                                </a>
-                            {% endif %}
-                        </a>                    
+                    <div class="col-12 col-md-5 col-lg-6">
+                        <div class="rounded div-img">
+                            <a href="{{ membership.image.url }}" target="_blank" class="mx-auto">  
+                                {% if membership.image %}
+                                    <a href="{{ membership.image.url }}" target="_blank">
+                                        <img class="card-img-top img-fluid rounded" src="{{ membership.image.url }}" alt="{{ membership.name }}">
+                                    </a>
+                                    {% else %}
+                                    <a href="">
+                                        <img class="card-img-top img-fluid" src="{{MEDIA_URL }}noimage.png" alt="{{ membership.name }}">
+                                    </a>
+                                {% endif %}
+                            </a>
+                        </div>              
                     </div>
 
                     <!-- membership details -->
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-md-7 col-lg-6">
                         <div class="text-dark p-2">
                             <h1 class="lg-font">{{ membership.name }}</h1>
+                            <p class="font-subtitle">{{ membership.name }} fitness plan</p>
                             <hr class="w-100 my-1">
-                            <p class="lg-font font-mb my-2" >€{{ membership.price }}/mo</p>
+                            <p class="my-2"><span class="lg-font font-mb">€{{ membership.price }}</span>/month</p>
                             <hr class="w-100 my-1">
+                            <p class="sm-font">{{ membership.description }}</p>
+                            <p class="sm-font">{{ membership.description }}</p>
                             <p class="sm-font">{{ membership.description }}</p>
                             <a href="{% url 'memberships' %}" class="btn btn-outline-dark">Back</a>
                         </div>
