fixed mobile navbar css bug, due to the boostrap class: me-auto, now account actions are properly highlighted in the ul

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,11 +7,7 @@
 <div class="container home-cont">
     <div class="row h-100">
         <div class="col-12 my-auto">
-            <h1 class="display-4 logo-font text-black">
-                Discover our<br>Fitness Plans here!</h1>
-            <div class="my-4">
-                <a class="btn btn-lg btn-outline-light" href="{% url 'memberships' %}" role="button"> Start now</a>
-            </div>
+            <h1 class="display-4 text-black">Discover our<br>Fitness Plans here!</h1><a class="btn btn-lg btn-outline-light my-4" href="{% url 'memberships' %}" role="button"> Start now</a>            
         </div>
     </div>
 </div>
