--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,27 @@ body{
     color: white;
 } 
 
+.user-link-top{
+    background-color: #393e44;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-top: -0.5rem;
+    margin-bottom: -0.5rem;
+}
+
+.user-link-btm{
+    background-color: #393e44;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-top: -0.5rem;
+    margin-bottom: -0.5rem;
+}
+
+.g-0-nav{
+    padding-right:0.75rem;
+    padding-left:0.75rem;
+}
+
 /* main section */
 
 .main-section{
@@ -125,6 +146,34 @@ transition: 0.4s;
  .card-m-detail{
     padding-left: 0px;
     padding-right: 0px;
+ }
+
+}
+
+/* navbar mobile */
+
+@media only screen and (max-width: 991px) {
+ .user-link-top{
+    padding-top: 0rem;
+    padding-bottom: 0.5rem;
+    margin-top: 0rem;
+    margin-bottom: -0.5rem;
+    border-radius: 5px 5px 0 0;
+ }
+ .user-link-btm{
+    padding-bottom: 0rem;
+    margin-bottom: 0rem;
+    border-radius: 0 0 5px 5px;
+ }
+
+ .ul-nav{
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+ }
+
+ .ul-nav li{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
  }
 
 }
