--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     <header class="fixed-top">  
     <!-- navabar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container-fluid g-0-nav g-0">
                 <a class="navbar-brand" id="logo" href="/">Moti Gym</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,28 +49,31 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+                    <ul class="navbar-nav me-lg-auto my-2 my-lg-0 navbar-nav-scroll g-0 ul-nav">
                         <li class="nav-item">
                         <a class="nav-link link-exp underline-transition" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link link-exp underline-transition" href="{% url 'memberships' %}">Memberships</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Logout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">My Profile</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Login</a>
+                            <a class="nav-link link-exp underline-transition" href="{% url 'memberships' %}">Memberships</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Signup</a>
+                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Shop</a>
                         </li>
-                    {% endif %}
+                        {% if user.is_authenticated %}
+                            <li class="nav-item user-link-top">
+                                <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Logout</a>
+                            </li>
+                            <li class="nav-item user-link-btm">
+                                <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">My Profile</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item user-link-top">
+                                <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Login</a>
+                            </li>
+                            <li class="nav-item user-link-btm">
+                                <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Signup</a>
+                            </li>
+                        {% endif %}
                     </ul>
 
                     <form class="d-flex"method="GET" action="{% url 'memberships' %}">
