--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                             <a class="nav-link link-exp underline-transition" href="{% url 'memberships' %}">Memberships</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">Shop</a>
+                            <a class="nav-link link-exp underline-transition" href="{% url 'products' %}">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link link-exp underline-transition" aria-current="page" href="/">Info</a>
