--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,3 @@
-<!-- base index html, insert content here -->
 {% extends "base.html" %}
 {% load static %}
 
@@ -17,7 +16,7 @@
         </div>         
     </div>
     
-    <!-- memberships header -->
+    <!-- products header -->
     <div class="row m-cards">
         <div class="col-10 offset-1 text-center mt-3">
             <h2 class="logo-font">product Plans</h2>
@@ -25,18 +24,18 @@
             <h5 class="">Submit now for the product plan that best suits your needs:</h5>
         </div>
     </div>
-    
-    <!-- membership detail card -->
+
+    <!-- products detail card -->
     <div class="row">
         <div class="col-10 offset-1 my-3">
             <div class="card main-detail-card bg-light ">
                 <div class="row">
 
-                    <!-- membership detail image -->
+                    <!-- products detail image -->
                     <div class="col-12 col-md-5 col-lg-6">
-                        <div class="rounded div-img">
+                        <div class="rounded bg-product-img">
                             <a href="{{ product.image.url }}" target="_blank" class="mx-auto">  
-                                {% if membership.image %}
+                                {% if product.image %}
                                     <a href="{{ product.image.url }}" target="_blank">
                                         <img class="card-img-top img-fluid rounded" src="{{ product.image.url }}" alt="{{ membership.name }}">
                                     </a>
@@ -49,7 +48,7 @@
                         </div>              
                     </div>
 
-                    <!-- membership details -->
+                    <!-- products details -->
                     <div class="col-12 col-md-7 col-lg-6">
                         <div class="text-dark p-2">
                             <h1 class="lg-font">{{ product.name }}</h1>
