--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -31,7 +31,7 @@
             <div class="col-lg-10 offset-lg-1 col-12 mb-4">
                 <div class="row g-0">
                 {% for product in products %}
-                    <div class="col-sm-12 col-md-4 col-xl-3 my-3 rounded bg-product px-1">
+                    <div class="col-6 col-md-4 col-xl-3 my-3 rounded bg-product px-1">
                         <a href="{% url 'product_detail' product.id %}" class="text-reset text-decoration-none">
                             <div class=" mt-2">
 
