--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,14 +16,14 @@
         </div>         
     </div>
     
-    <!-- products header -->
+    <!-- products header
     <div class="row m-cards">
         <div class="col-10 offset-1 text-center mt-3">
             <h2 class="logo-font">product Plans</h2>
             <hr class="w-100 mb-1">
             <h5 class="">Submit now for the product plan that best suits your needs:</h5>
         </div>
-    </div>
+    </div> -->
 
     <!-- products detail card -->
     <div class="row">
@@ -52,7 +52,7 @@
                     <div class="col-12 col-md-7 col-lg-6">
                         <div class="text-dark p-2">
                             <h1 class="lg-font">{{ product.name }}</h1>
-                            <p class="font-subtitle">{{ product.name }} fitness plan</p>
+                            <p class="font-subtitle">Moti gym {{ product.name }}</p>
                             <hr class="w-100 my-1">
                             <p class="my-2"><span class="lg-font font-mb">€{{ product.price }}</span>/month</p>
                             <hr class="w-100 my-1">
