--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,35 +15,25 @@
             <span>{{ product.name }}</span>            
         </div>         
     </div>
-    
-    <!-- products header
-    <div class="row m-cards">
-        <div class="col-10 offset-1 text-center mt-3">
-            <h2 class="logo-font">product Plans</h2>
-            <hr class="w-100 mb-1">
-            <h5 class="">Submit now for the product plan that best suits your needs:</h5>
-        </div>
-    </div> -->
 
     <!-- products detail card -->
     <div class="row">
         <div class="col-10 offset-1 my-3">
             <div class="card main-detail-card bg-light ">
                 <div class="row">
-
                     <!-- products detail image -->
                     <div class="col-12 col-md-5 col-lg-6">
                         <div class="rounded bg-product-img">
                             <a href="{{ product.image.url }}" target="_blank" class="mx-auto">  
-                                {% if product.image %}
-                                    <a href="{{ product.image.url }}" target="_blank">
-                                        <img class="card-img-top img-fluid rounded" src="{{ product.image.url }}" alt="{{ membership.name }}">
-                                    </a>
-                                    {% else %}
-                                    <a href="">
-                                        <img class="card-img-top img-fluid" src="{{MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                    </a>
-                                {% endif %}
+                            {% if product.image %}
+                                <a href="{{ product.image.url }}" target="_blank">
+                                    <img class="card-img-top img-fluid rounded" src="{{ product.image.url }}" alt="{{ membership.name }}">
+                                </a>
+                                {% else %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                </a>
+                            {% endif %}
                             </a>
                         </div>              
                     </div>
@@ -54,11 +44,33 @@
                             <h1 class="lg-font">{{ product.name }}</h1>
                             <p class="font-subtitle">Moti gym {{ product.name }}</p>
                             <hr class="w-100 my-1">
-                            <p class="my-2"><span class="lg-font font-mb">€{{ product.price }}</span>/month</p>
+                            <p class="my-2 lg-font font-mb">€{{ product.price }}</p>
                             <hr class="w-100 my-1">
                             <p class="sm-font">{{ product.description }}</p>
                             <p class="sm-font">{{ membership.description }}</p>
-                            <a href="{% url 'products' %}" class="btn btn-outline-dark">Back</a>
+
+                            <!-- add to bag form -->
+                            <form class="form">
+                                {% csrf_token %}
+                                <div class="form-row">
+                                    <div class="col-12">
+                                        <p class="mt-3"><strong>Quantity:</strong></p>
+                                        <div class="form-group w-50">
+                                            <div class="input-group">
+                                                <input class="form-control" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <a href="{% url 'products' %}" class="btn mt-3">
+                                            <span>
+                                                <i class="fas fa-chevron-left"></i>
+                                            </span>Back</a>
+                                        <input type="submit" class="btn btn-outline-dark text-uppercase mt-3" value="Add to Bag">
+                                    </div>
+                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
