--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container-fluid row g-0">
-    <div class="rounded mt-4 prd-main-div col-10 offset-1 bg-light">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
 
         <!-- products path -->
         <div class="row sm-font text-center">
