added has_sizes in product models and added size element in the product detail page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -160,6 +160,10 @@ transition: 0.4s;
     transform-origin: 50% 50%;
 }
 
+.pl-back {
+    padding-left: 0px;
+}
+
 /* bag */
 
 .bag-main-div, .bag-main-div h2{
