--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                     </ul>
 
                     <form class="d-flex"method="GET" minlength="1" action="{% url 'products' %}">
-                        <input class="form-control me-2 search-box" name="q" type="text" placeholder="Search" aria-label="Search">
+                        <input class="form-control me-2 search-box" name="q" type="text" placeholder="Search for products.." aria-label="Search">
                         <button class="btn btn-outline-info" type="submit">Search</button>
                     </form>
 
