--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -23,10 +23,12 @@
         <!-- products header -->
         <div class="row">
             <div class="col-10 offset-1 text-start mt-2">
-                <h2>Your Shopping Bag:</h2>
-                <hr class="w-100 mb-1">
+                <h2 class="d-none d-sm-block">Your Shopping Bag:</h2>
+                <h4 class="d-sm-none" >Your Shopping Bag:</h4>
             </div>
         </div>
+        <hr class="w-100 mb-1">
+
             <!-- USE THIS TABLE AS TEMPLATEEEEEE -->
         {% if bag_products %}
         <div class="table-responsive">
@@ -37,7 +39,7 @@
                         <th scope="col"></th>
                         <th scope="col">Price</th>
                         <th scope="col">Quantity</th>
-                        <th scope="col">Subtotal</th>
+                        <th scope="col"><span class="small text-muted">Rounded </span>SubTot</th>
                     </tr>
                 </thead>
                 {% for product in bag_products %}
@@ -57,14 +59,15 @@
                             <p class="py-2">{{ product.quantity }}</p>
                         </td>
                         <td class="align-top">
-                            <p class="py-2 text-muted">{% widthratio product.product.price 1 product.quantity %}</p> 
+                            <!-- ERASE <p class="py-2 text-muted">€{% widthratio product.product.price 1 product.quantity %}</p>  -->
+                            <p class="py-2 text-muted">€{{ subtotal }}</p> 
                         </td>
                     </tr>
                 </tbody>
                 {% endfor %} 
                 <tr>
                     <td colspan="5" class="pt-5 text-end">
-                        <h6><strong>Total: ${{ total|floatformat:2 }}</strong></h6>
+                        <h6><strong>Total: €{{ total|floatformat:2 }}</strong></h6>
                         <h6>Free Delivery on all our products!</h6>
                     </td>
                 </tr>
@@ -76,11 +79,12 @@
                             </span>
                             <span>Keep shopping</span>
                         </a>
-                        <a href="" class="btn btn-black">
+                        <!-- CHECK MARGIN TOP -->
+                        <a href="{% url 'products' %}" class="mt-2 mt-sm-0 btn btn-outline-dark">
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
                             </span>
-                            <span class="text-uppercase">Checkout Securely Now</span>
+                            <span class="text-uppercase small">Checkout Securely Now</span>
                         </a>
                     </td>
                 </tr>
