--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,25 +52,39 @@
                             <!-- add to bag form -->
                             <form class="form" action="{% url 'add_item' product.id %}" method="POST">
                                 {% csrf_token %}
-
-                                <div class="form-row">
+                                <div class="form row">
+                                {% with product.has_sizes as s %}
+                                {% if s %}
+                                    <div class="col-12">
+                                        <p><strong>Size:</strong></p>
+                                        <select class="form-select" aria-label="Select your size" name="product_size" id='id_product_size'>
+                                            <option disabled selected>Select your size:</option>
+                                            <option value="xs">XS</option>
+                                            <option value="s">S</option>
+                                            <option value="m">M</option>
+                                            <option value="l">L</option>
+                                            <option value="xl">XL</option>
+                                        </select>
+                                    </div>
+                                {% endif %}
                                     <div class="col-12">
                                         <p class="mt-3"><strong>Quantity:</strong></p>
-                                        <div class="form-group w-50">
+                                        <div class="form-group w-100">
                                             <div class="input-group">
                                                 <input class="form-control" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                             </div>
                                         </div>
                                     </div>
                                     
-                                    <div class="col-12">
+                                    <div class="col{% if s %}-6 mt-2{% endif %} col-12 mt-2">
                                         <a href="{% url 'products' %}" class="btn mt-3">
                                             <span>
                                                 <i class="fas fa-chevron-left"></i>
                                             </span>Back</a>
-                                        <input type="submit" class="btn btn-outline-dark text-uppercase mt-3" value="Add to Bag">
+                                        <input type="submit" class="btn btn-info text-uppercase mt-3" value="Add to Bag">
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                    {% endwith %}
                                 </div>
                             </form>
                         </div>
