--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,13 +52,13 @@
                             <!-- add to bag form -->
                             <form class="form" action="{% url 'add_item' product.id %}" method="POST">
                                 {% csrf_token %}
-                                <div class="form row">
+                                <div class="form-row">
                                 {% with product.has_sizes as s %}
                                 {% if s %}
                                     <div class="col-12">
                                         <p><strong>Size:</strong></p>
-                                        <select class="form-select" aria-label="Select your size" name="product_size" id='id_product_size'>
-                                            <option disabled selected>Select your size:</option>
+                                        <select class="form-select" aria-label="Select your size" name="product_size" id='id_product_size' required>
+                                            <option  value="" disabled selected>Select your size:</option>
                                             <option value="xs">XS</option>
                                             <option value="s">S</option>
                                             <option value="m">M</option>
@@ -71,7 +71,7 @@
                                         <p class="mt-3"><strong>Quantity:</strong></p>
                                         <div class="form-group w-100">
                                             <div class="input-group">
-                                                <input class="form-control" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                                <input class="form-control" type="number" name="quantity" value="1" min="1" max="99" data-product_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                             </div>
                                         </div>
                                     </div>
