--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -69,7 +69,7 @@
                     <td colspan="5" class="pt-1 text-end">
                         <h6 class="text-muted small"><strong >SubTotal: €{{ total|floatformat:2 }}</strong></h6>
                         <h6 class="text-muted small">Delivery cost:€{{ delivery }}</h6>
-                        <h3>Total: €{{final_total}}</h3>
+                        <h3>Total: €{{ final_total|floatformat:2 }}</h3>
                     </td>
                 </tr>
                 <tr>
@@ -81,7 +81,7 @@
                             <span>Continue shopping</span>
                         </a>
                         <!-- CHECK MARGIN TOP -->
-                        <a href="{% url 'products' %}" class="mt-2 mt-sm-0 btn btn-outline-dark">
+                        <a href="{% url 'products' %}" class="my-2 mt-sm-0 btn btn-outline-dark">
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
                             </span>
