--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,37 +51,59 @@
 
                             <!-- add to bag form -->
                             <form class="form" action="{% url 'add_item' product.id %}" method="POST">
-                                {% csrf_token %}
+                            {% csrf_token %}
                                 <div class="form-row">
                                 {% with product.has_sizes as s %}
                                 {% if s %}
-                                    <div class="col-12">
-                                        <p><strong>Size:</strong></p>
-                                        <select class="form-select" aria-label="Select your size" name="product_size" id='id_product_size' required>
-                                            <option  value="" disabled selected>Select your size:</option>
-                                            <option value="xs">XS</option>
-                                            <option value="s">S</option>
-                                            <option value="m">M</option>
-                                            <option value="l">L</option>
-                                            <option value="xl">XL</option>
-                                        </select>
-                                    </div>
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-select" aria-label="Select your size" name="product_size" id='id_product_size' required>
+                                        <option  value="" disabled selected>Select your size:</option>
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m">M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
                                 {% endif %}
-                                    <div class="col-12">
-                                        <p class="mt-3"><strong>Quantity:</strong></p>
-                                        <div class="form-group w-100">
-                                            <div class="input-group">
-                                                <input class="form-control" type="number" name="quantity" value="1" min="1" max="99" data-product_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+
+                                <!-- quantity selector -->
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <div class="form-group w-100">
+                                        <div class="input-group">
+                                            <!-- quantity number -->
+                                            <input class="form-control" type="number" 
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-product_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                            <!-- minus button -->
+                                            <div class="input-group-append">
+                                                <button class="decrement-qty btn btn-outline-info" data-product_id="{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus"></i>
+                                                    </span>
+                                                </button>                                                 
+                                            </div>
+                                            <!-- plus button -->
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-outline-info" data-product_id="{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>                                                 
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                                     
-                                    <div class="col{% if s %}-6 mt-2{% endif %} col-12 mt-2">
-                                        <a href="{% url 'products' %}" class="btn mt-3">
+                                    <div class="col-12 mt-2 mb-4">
+                                        <a href="{% url 'products' %}" class="btn mt-3 pl-back">
                                             <span>
                                                 <i class="fas fa-chevron-left"></i>
                                             </span>Back</a>
-                                        <input type="submit" class="btn btn-info text-uppercase mt-3" value="Add to Bag">
+                                        <input type="submit" class="btn btn-info text-uppercase mt-3"
+                                        value="Add to Bag">
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                     {% endwith %}
